force-app/main/default/objects/Event/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviewer's Events</relationshipLabel>
    <relationshipName>Interviewers</relationshipName>
    <type>Lookup</type>
</CustomField>