force-app/main/default/objects/Event/fields/Sales_Manager_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager (Interviewer)</label>
    <referenceTo>Interviewer__c</referenceTo>
    <relationshipLabel>Interview Events</relationshipLabel>
    <relationshipName>Interview_Events</relationshipName>
    <type>Lookup</type>
</CustomField>